samples/_failures_safe/1761212135_c1a441_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a5df12b5.c: In function ‘main’:
./samples/SAFE/__tmp_a5df12b5.c:183:16: error: missing terminating " character
  183 |         printf("%-12s %-12s %-8d
      |                ^~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_a5df12b5.c:183:9: error: expected expression at end of input
  183 |         printf("%-12s %-12s %-8d
      |         ^~~~~~
./samples/SAFE/__tmp_a5df12b5.c:183:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_a5df12b5.c:183:9: error: expected declaration or statement at end of input
